force-app/main/default/objects/Triggers_status__c/Triggers_status__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To control the status of the triggers</description>
    <label>Triggers_status</label>
</CustomObject>