force-app/main/default/objects/Triggers_status__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address</label>
    <type>Checkbox</type>
</CustomField>