force-app/main/default/objects/Triggers_status__c/fields/Fee_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Fee_Calculation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fee_Calculation</label>
    <type>Checkbox</type>
</CustomField>