force-app/main/default/objects/Triggers_status__c/fields/InterBranch_Manual_Invoice__c.field-meta.xml
<CustomField>
    <fullName>InterBranch_Manual_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to control the trigger on Manual Invoice</description>
    <label>InterBranch_Manual_Invoice</label>
    <type>Checkbox</type>
</CustomField>