force-app/main/default/objects/Triggers_status__c/fields/OFAC_Trigger__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFAC_Trigger</label>
    <type>Checkbox</type>
</CustomField>