force-app/main/default/objects/Triggers_status__c/fields/OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityTrigger</label>
    <type>Checkbox</type>
</CustomField>