force-app/main/default/objects/Triggers_status__c/fields/PromotorCompany__c.field-meta.xml
<CustomField>
    <fullName>PromotorCompany__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PromotorCompany</label>
    <type>Checkbox</type>
</CustomField>